Refactor list assertions and variable initialization
Updated test cases to use `getFirst()` method for list assertions instead of `get(0)` for better readability and safety. Also, refactored variable initialization in `UserControllerTest` to use local scope for the `User` object. Additionally, replaced `Arrays.asList()` with `Collections.singletonList()` for efficiency.